// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch > should render correctly 1`] = `
"<input type="checkbox" class="native">
<div class="marker">
  <anonymous-stub class="checked" size="16"></anonymous-stub>
</div>"
`;

exports[`Switch > should render with an error prop 1`] = `
"<input type="checkbox" class="native mock-error" aria-invalid="true" aria-errormessage="Test Error">
<div class="marker">
  <anonymous-stub class="checked" size="16"></anonymous-stub>
</div>"
`;
